# tmc

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  GBA.mk  INSTALL.md  Jenkinsfile  Makefile  README.md  README_8md.html  TileMap.html  Toolchain.mk  acroBandits_8c.html  affine_8c.html  ambientClouds_8c.html  angryStatueManager_8c.html  angryStatueManager_8h.html  angryStatue_8c.html  animatedBackgroundManager_8c.html  animatedBackgroundManager_8h.html  anju_8c.html  annotated.html  archway_8c.html  areaMetadata_8c.html  area_8h.html  armosInteriorManager_8c.html  armosInteriorManager_8h.html  armos_8c.html  arrowProjectile_8c.html  asm_8h.html  asmdiff.sh  assets.json  assets.yaml  backgroundAnimations_8c.html  backgroundAnimations_8h.html  backgroundCloud_8c.html  bakerOven_8c.html  ballAndChain_8c.html  ballChainSoldier_8c.html  (+1430 more)
asm/: GetProgressFlag.s  InitializeLink.s  acroBandits.s  ambientClouds.s  anju.s  archway.s  armos.s  backgroundCloud.s  bakerOven.s  ballChainSoldier.s  barrelInside.s  beanstalk.s  beanstalkSubtask.s  beedle.s  beetle.s  bell.s  bigBarrel.s  bigGoron.s  bigIceBlock.s  bigPushableLever.s  bigVortex.s  bird.s  bladeBrothers.s  bladeTrap.s  blockPushed.s  board.s  bobomb.s  bollard.s  bombPeahat.s  bombarossa.s  book.s  bossDoor.s  bowMoblin.s  bowUse.s  brocco.s  businessScrub.s  businessScrubPrologue.s  button.s  carlov.s  carpenter.s  (+595 more)
assets/: .gitignore  assets.json  gfx.json  map.json  mapData.json  samples.json  sounds.json
cmake/: cc.py
constants/: audio_constants.inc  constants.inc  gba_constants.inc  misc_constants.inc
data/: acroBandits.inc  areaPropertyLists.s  armos.inc  assets.s  ballChainSoldier.inc  businessScrubPrologue.inc  curtain.inc  data_08000360.s  data_08000F54.s  data_080029B4.s  data_080046A4.s  data_08007DF4.s  data_080B2A70.s  data_080B3054.s  data_080B3740.s  data_080B3E70.s  data_080B4410.s  data_080B7910.s  data_080B7B74.s  data_080C93E0.s  data_080CA2B4.s  data_080CA66C.s  data_080CAA98.s  data_080CB570.s  data_080CB734.s  data_080CB948.s  data_080CBA28.s  data_080CBB64.s  data_080CBB90.s  data_080CBC38.s  data_080CBDBC.s  data_080CBEC4.s  data_080CC19C.s  data_080CC6FC.s  data_080CEBDC.s  data_080D015C.s  data_080D0448.s  data_080D1C70.s  data_080D3D94.s  data_080D5360.s  (+113 more)
docs/: doxygen-extra.css
graphics/: font.pal  gameover.pal
include/: New Text Document.txt  area.h  arm_proxy.h  asm.h  audio.h  backgroundAnimations.h  beanstalkSubtask.h  bg.h  collision.h  color.h  common.h  coord.h  createEnemy.h  createObject.h  cutscene.h  definitions.h  dma.h  droptables.h  effects.h  enemy.h  enemyUtils.h  enterPortalSubtask.h  entity.h  entityData.h  fade.h  figurineMenu.h  fileScreen.h  fileselect.h  flags.h  functions.h  game.h  global.h  greatFairy.h  hitbox.h  interrupts.h  item.h  itemMenuTable.h  itemMetaData.h  kinstone.h  lakitu.h  (+43 more)
src/: _dmaFill16.c  _dmaFill32.c  _dmaZero.c  affine.c  archway.c  area.c  arm_proxy.c  audio.c  backgroundAnimations.c  beanstalkSubtask.c  bell.c  bigGoron.c  bitGetters.c  bladeBrothers.c  bladeTrap.c  bombPeahat.c  cat.c  (+215 more)
tools/: .gitignore  CMakeLists.txt  cc.py  extract_include_enum.py
tools/agb2mid/: .gitignore  Makefile  agb.cpp  main.cpp  main.h  midi.cpp  midi.h  tables.cpp
tools/asset_extractor/: .gitignore  Makefile  asset_extractor.py
tools/asset_extractor/assets/: animation.py  base.py  entity_list.py  exit_list.py  extra_frame_offsets.py  fixed_type_gfx.py  frame_obj_lists.py  gfx_group.py  palette_group.py  sprite_frame.py
tools/asset_processor/: .gitignore  Makefile  main.cpp  util.cpp  util.h
tools/asset_processor/assets/: aif.cpp  animation.h  asset.cpp  asset.h  exitlist.cpp  exitlist.h  frameobjlists.cpp  gfx.cpp  gfx.h  midi.cpp  midi.h  palette.h  spriteframe.cpp
tools/asset_processor/include/: aif.h  animation.h  asset.h  exitlist.h  frameobjlists.h  gfx.h  main.h  midi.h  palette.h  reader.h  spriteframe.h  tileset.h  util.h
tools/asset_processor/src/: aif.cpp  animation.cpp  asset.cpp  exitlist.cpp  frameobjlists.cpp  gfx.cpp  main.cpp  midi.cpp  palette.cpp  reader.cpp  spriteframe.cpp  tileset.cpp  util.cpp
tools/lib/cmake/nlohmann_json/: nlohmann_jsonConfigVersion.cmake  nlohmann_jsonTargets.cmake
tools/mid2agb/: agb.cpp
tools/preproc/: CMakeLists.txt  asm_file.cpp  c_file.cpp  charmap.cpp  preproc.cpp  preproc.h
tools/scaninc/: scaninc.cpp
tools/script_disassembler/: .gitignore  definitions.py  incbin_parser.py  script_disassembler.py  split_script_data.py  utils.py
tools/src/: CMakeLists.txt
tools/src/agb2mid/: CMakeLists.txt  agb.cpp  agb.h  tables.h
tools/src/aif2pcm/: CMakeLists.txt  extended.c  main.c
tools/src/asset_processor/: CMakeLists.txt  main.cpp  main.h  offsets.cpp  offsets.h  reader.cpp  reader.h  util.cpp  util.h
tools/src/asset_processor/assets/: aif.cpp  aif.h  animation.cpp  asset.cpp  asset.h  dungeonmap.cpp  dungeonmap.h  exitlist.cpp  frameobjlists.cpp  frameobjlists.h  gfx.cpp  gfx.h  macroasm.cpp  macroasm.h  map.cpp  map.h  midi.cpp  palette.cpp  spriteframe.cpp  spriteframe.h  subtileset.cpp  subtileset.h  tileset.cpp  tileset.h
tools/src/bin2c/: CMakeLists.txt  bin2c.c
tools/src/gbafix/: CMakeLists.txt  elf.h  gbafix.c
tools/src/gbagfx/: CMakeLists.txt  convert_png.c  convert_png.h  font.c  font.h  gfx.c  gfx.h  global.h  huff.c  huff.h  jasc_pal.c  jasc_pal.h  link.pal  lz.c  lz.h  main.c  options.h  rl.c  rl.h  util.c  util.h
tools/src/mid2agb/: CMakeLists.txt  agb.cpp  error.cpp  main.cpp  midi.cpp  midi.h  tables.cpp
tools/src/preproc/: CMakeLists.txt  asm_file.cpp  asm_file.h  c_file.cpp  c_file.h  char_util.h  charmap.cpp  charmap.h  preproc.cpp  preproc.h  string_parser.cpp  string_parser.h  utf8.cpp  utf8.h
tools/src/scaninc/: CMakeLists.txt  asm_file.cpp  asm_file.h  c_file.cpp  c_file.h  scaninc.cpp  scaninc.h  source_file.cpp  source_file.h
tools/src/tmc_strings/: CMakeLists.txt  main.cpp
tools/src/util/: CMakeLists.txt  dummy.cpp
tools/src/util/util/: file.h  types.h
tools/tmc_strings/: .gitignore  .gitrepo  Makefile  README.md  main.cpp
(+5558 files in other folders)
