# libraries
add_subdirectory(util)
# binaries
add_subdirectory(agb2mid)
add_subdirectory(aif2pcm)
add_subdirectory(asset_processor)
add_subdirectory(bin2c)
add_subdirectory(gbafix)
add_subdirectory(gbagfx)
add_subdirectory(mid2agb)
add_subdirectory(preproc)
add_subdirectory(scaninc)
add_subdirectory(tmc_strings)
